--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
+    paths:
+      - .github/workflows/flat.yml    
+  workflow_dispatch: null
   schedule:
     - cron: '*/30 * * * *'
 
@@ -26,5 +28,3 @@ jobs:
         with:
           http_url: https://raw.githubusercontent.com/docker/docker-install/master/install.sh
           downloaded_filename: install.sh
-          
-          
